# p1-18-project

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE  SCOPES.md
src/: add-matches-file.c  add-matches-file.h  booking.c  booking.h  create-array.c  create-array.h  create-match-stats.c  create-match-stats.h  match-list.c  match-list.h  match.c  match.h  matches.txt  overview-matches.c  overview-matches.h  overview.c  overview.h  search-matches.c  search-matches.h  search.c  search.h  string-list.c  string-list.h  ticket-list.c  ticket-list.h  ticket-system  ticket-system.c  tickets.txt
