cmake_minimum_required(VERSION 3.1)
project(TicketSystem C)
set(CMAKE_C_STANDARD 11)

add_executable(ticket-system src/ticket-system.c)
add_library(create-match-stats src/create-match-stats.c)
add_library(overview-matches src/overview-matches.c)
add_library(create-array src/create-array.c)
add_library(booking src/booking.c)
add_library(search-matches src/search-matches.c)
target_link_libraries(ticket-system create-match-stats)
target_link_libraries(ticket-system overview-matches)
target_link_libraries(ticket-system create-array)
target_link_libraries(ticket-system booking)
target_link_libraries(ticket-system search-matches)
